--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,45 +1,48 @@
-name: 'Terraform'
+name: Terraform
 
 on:
-  workflow_dispatch:
+	workflow_dispatch:
+
+
+env:
+	TF_VAR_bucket_name:  'dez-capstone-2023'
+	TF_VAR_project_id: 'dez-capstone-2023' 
+	TF_VAR_region: 'us-central1'
+	TF_VAR_zone: 'us-central1-c'
 
 jobs:
+
 	terraform:
 		runs-on: ubuntu-latest
-		env:
-			TF_VAR_bucket_name:  'dez-capstone-2023'
-			TF_VAR_project_id: 'dez-capstone-2023' 
-			TF_VAR_region: 'us-central1'
-			TF_VAR_zone: 'us-central1-c'
-
+		
 		steps:
-		- name: Checkout
-			uses: actions/checkout@v3
+			- name: Checkout
+				uses: actions/checkout@v3
 
-		- name: 'Authenticate to Google Cloud'
-			id: auth
-			uses: google-github-actions/auth@v0
-			with:
-				credentials_json: ${{secrets.GCP_SA_KEY}}
+			- name: 'Authenticate to Google Cloud'
+				id: auth
+				uses: google-github-actions/auth@v0
+				with:
+					credentials_json: ${{secrets.GCP_SA_KEY}}
 
-		- name: 'Storing SA Key to json file'
-			id: sa-config
-			run: |
-				echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
-			shell: bash
+			- name: 'Storing SA Key to json file'
+				id: sa-config
+				run: |
+					echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
+				shell: bash
 
-		- name: Terraform Init
-			id: tf_init
-			run: terraform init -backend-config="bucket=${{ env.TF_VAR_bucket_name }}"
+			- name: Terraform Init
+				id: tf_init
+				run: terraform init -backend-config="bucket=${{ env.TF_VAR_bucket_name }}"
 
-		- name: Terraform Validate
-			id: tf_validate
-			run: terraform validate
+			- name: Terraform Validate
+				id: tf_validate
+				run: terraform validate
 
-		- name: Terraform Plan
-			id: terraform_plan
-			run: terraform plan
+			- name: Terraform Plan
+				id: terraform_plan
+				run: terraform plan
 
-		- name: Terraform Apply
-			id: tf_apply
-			run: terraform apply --auto-approve
+			- name: Terraform Apply
+				id: tf_apply
+				run: terraform apply --auto-approve
