--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,4 +1,4 @@
-name: Terraform
+name: Terraform_test
 
 on: workflow_dispatch
 
@@ -24,11 +24,11 @@ jobs:
         with:
           credentials_json: ${{secrets.GCP_SA_KEY}}
 
-      - name: 'Storing SA Key to json file'
-        id: sa-config
-        run: |
-          echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
-        shell: bash
+      # - name: 'Storing SA Key to json file'
+      #   id: sa-config
+      #   run: |
+      #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
+      #   shell: bash
 
       - name: Terraform init, plan and apply
         run: |
