--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,7 +1,11 @@
 name: Terraform_test
 
 on: workflow_dispatch
-
+  inputs:
+        tfpath:
+          description: 'TF File Path'     
+          required: false
+          default: 'terraform/'
 
 env:
   TF_VAR_bucket_name:  'dez-capstone-2023'
