--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,11 +1,13 @@
 name: Terraform_test
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  push:
   inputs:
-        tfpath:
-          description: 'TF File Path'     
-          required: false
-          default: 'terraform/'
+    tfpath:
+      description: 'TF File Path'     
+      required: false
+      default: 'terraform/'
 
 env:
   TF_VAR_bucket_name:  'dez-capstone-2023'
