--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -6,7 +6,7 @@ on:
     inputs:
       tfpath:
         description: 'TF File Path'     
-        required: false
+        required: true
         default: 'terraform/'
 
 env:
