--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -21,30 +21,36 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: 'Authenticate to Google Cloud'
-        id: auth
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{secrets.GCP_SA_KEY}}
-
-      # - name: 'Storing SA Key to json file'
-      #   id: sa-config
-      #   run: |
-      #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
-      #   shell: bash
 
       - name: Terraform init, plan and apply
         run: |
           echo `pwd`
-          echo "tfpath ${{ github.event.inputs.tfpath }}"
-          echo "** Running Terraform Init**"
-          terraform init
+          echo "tfpath From> ${{ github.event.inputs.tfpath }} <To"
 
-          echo "** Running Terraform Validate**"
-          terraform validate
+      # - name: Checkout
+      #   uses: actions/checkout@v3
 
-          echo "** Running Terraform Plan**"
-          terraform plan
+      # - name: 'Authenticate to Google Cloud'
+      #   id: auth
+      #   uses: google-github-actions/auth@v0
+      #   with:
+      #     credentials_json: ${{secrets.GCP_SA_KEY}}
+
+      # # - name: 'Storing SA Key to json file'
+      # #   id: sa-config
+      # #   run: |
+      # #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
+      # #   shell: bash
+
+      # - name: Terraform init, plan and apply
+      #   run: |
+      #     echo `pwd`
+      #     echo "tfpath ${{ github.event.inputs.tfpath }}"
+      #     echo "** Running Terraform Init**"
+      #     terraform init
+
+      #     echo "** Running Terraform Validate**"
+      #     terraform validate
+
+      #     echo "** Running Terraform Plan**"
+      #     terraform plan
