--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,6 +1,8 @@
 name: Terraform_test
 
-on: [workflow_dispatch, push]
+on:
+  # workflow_dispatch:
+  push:
   inputs:
     tfpath:
       description: 'TF File Path'     
