--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,7 +1,13 @@
 name: Terraform_test
 
 on:
-  # workflow_dispatch:
+  workflow_dispatch:
+    push:
+    inputs:
+      tfpath:
+        description: 'TF File Path'     
+        required: true
+        default: 'terraform/'
   push:
     inputs:
       tfpath:
