--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -29,12 +29,16 @@ jobs:
     steps:
 
       - name: Terraform init, plan and apply
+        shell: sh
         run: |
           echo `pwd`
           echo "tfpath From> ${{ github.event.inputs.tfpath }} <To"
+          echo "tfpath2 From> ${{ inputs.tfpath }} <To"
           echo "TFPATH From> $TFPATH <To"
+          echo "TFPATH2 From> $TFPATH2 <To"
         env:
             TFPATH: ${{ github.event.inputs.tfpath }}
+            TFPATH2: ${{ inputs.tfpath }}
 
       # - name: Checkout
       #   uses: actions/checkout@v3
