--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -2,18 +2,17 @@ name: Terraform_test
 
 on:
   workflow_dispatch:
-    push:
     inputs:
       tfpath:
         description: 'TF File Path'     
         required: true
         default: 'terraform/'
-  push:
-    inputs:
-      tfpath:
-        description: 'TF File Path'     
-        required: true
-        default: 'terraform/'
+  # push:
+  #   inputs:
+  #     tfpath:
+  #       description: 'TF File Path'     
+  #       required: true
+  #       default: 'terraform/'
 
 env:
   TF_VAR_bucket_name:  'dez-capstone-2023'
