--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -39,14 +39,14 @@ jobs:
             TFPATH: ${{ github.event.inputs.tfpath }}
             TFPATH2: ${{ inputs.tfpath }}
 
-      # - name: Checkout
-      #   uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      # - name: 'Authenticate to Google Cloud'
-      #   id: auth
-      #   uses: google-github-actions/auth@v0
-      #   with:
-      #     credentials_json: ${{secrets.GCP_SA_KEY}}
+      - name: 'Authenticate to Google Cloud'
+        id: auth
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{secrets.GCP_SA_KEY}}
 
       # # - name: 'Storing SA Key to json file'
       # #   id: sa-config
@@ -54,15 +54,15 @@ jobs:
       # #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
       # #   shell: bash
 
-      # - name: Terraform init, plan and apply
-      #   run: |
-      #     echo `pwd`
-      #     echo "tfpath ${{ github.event.inputs.tfpath }}"
-      #     echo "** Running Terraform Init**"
-      #     terraform init
+      - name: Terraform init, plan and apply
+        run: |
+          echo `pwd`
+          echo "cd ${{ github.event.inputs.tfpath }}"
+          echo "** Running Terraform Init**"
+          terraform init
 
-      #     echo "** Running Terraform Validate**"
-      #     terraform validate
+          echo "** Running Terraform Validate**"
+          terraform validate
 
-      #     echo "** Running Terraform Plan**"
-      #     terraform plan
+          echo "** Running Terraform Plan**"
+          terraform plan
