--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: Terraform init, plan and apply
         run: |
           echo `pwd`
-          ${{ github.event.inputs.tfpath }}
+          cd ${{ github.event.inputs.tfpath }}
           echo "** Running Terraform Init**"
           terraform init
 
