--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -48,11 +48,11 @@ jobs:
         with:
           credentials_json: ${{secrets.GCP_SA_KEY}}
 
-      # # - name: 'Storing SA Key to json file'
-      # #   id: sa-config
-      # #   run: |
-      # #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
-      # #   shell: bash
+      - name: 'Storing SA Key to json file'
+        id: sa-config
+        run: |
+          echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
+      #   shell: bash
 
       - name: Terraform init, plan and apply
         run: |
