--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -19,6 +19,7 @@ env:
   TF_VAR_project_id: 'dez-capstone-2023' 
   TF_VAR_region: 'us-central1'
   TF_VAR_zone: 'us-central1-c'
+  TF_VAR_credentials: ${{ secrets.GCP_SA_KEY }}
 
 jobs:
 
