--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,7 +1,7 @@
 name: Terraform_test
 
 on:
-  workflow_dispatch:
+  [workflow_dispatch, push]
     inputs:
       tfpath:
         description: 'TF File Path'     
@@ -20,6 +20,8 @@ env:
   TF_VAR_region: 'us-central1'
   TF_VAR_zone: 'us-central1-c'
   TF_VAR_credentials: ${{ secrets.GCP_SA_KEY }}
+  TF_VAR_credentials_file: ${{ secrets.GCP_SA_KEY }}
+  
 
 jobs:
 
@@ -49,11 +51,6 @@ jobs:
         with:
           credentials_json: ${{secrets.GCP_SA_KEY}}
 
-      # - name: 'Storing SA Key to json file'
-      #   id: sa-config
-      #   run: |
-      #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
-      #   shell: bash
 
       - name: Terraform init, plan and apply
         run: |
@@ -67,3 +64,9 @@ jobs:
 
           echo "** Running Terraform Plan**"
           terraform plan
+
+      - name: 'Storing SA Key to json file'
+        id: sa-config
+        run: |
+          echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
+        shell: bash
