--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -1,17 +1,18 @@
 name: Terraform_test
 
-on: [workflow_dispatch, push]
-  inputs:
-    tfpath:
-      description: 'TF File Path'     
-      required: false
-      default: 'terraform/'
-  # push:
-  #   inputs:
-  #     tfpath:
-  #       description: 'TF File Path'     
-  #       required: true
-  #       default: 'terraform/'
+on: 
+  workflow_dispatch:
+    inputs:
+      tfpath:
+        description: 'TF File Path'     
+        required: false
+        default: 'terraform/'
+  push:
+    inputs:
+      tfpath:
+        description: 'TF File Path'     
+        required: false
+        default: 'terraform/'
 
 env:
   TF_VAR_bucket_name:  'dez-capstone-2023'
