--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -51,6 +51,8 @@ jobs:
         with:
           credentials_json: ${{secrets.GCP_SA_KEY}}
 
+      - name: Setup Terraform CLI
+        uses: hashicorp/setup-terraform@v2.0.2
 
       - name: Terraform init, plan and apply
         run: |
@@ -67,9 +69,10 @@ jobs:
 
           echo "** Running Terraform Plan**"
           terraform plan
+        working-directory: ${{ github.event.inputs.tfpath }}
 
-      - name: 'Storing SA Key to json file'
-        id: sa-config
-        run: |
-          echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
-        shell: bash
+      # - name: 'Storing SA Key to json file'
+      #   id: sa-config
+      #   run: |
+      #     echo ${{ secrets.GCP_SA_KEY }} | base64 -d > credentials.json
+      #   shell: bash
