--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -5,13 +5,13 @@ on:
     inputs:
       tfpath:
         description: 'TF File Path'     
-        required: true
+        required: false
         default: 'terraform/'
   push:
     inputs:
       tfpath:
         description: 'TF File Path'     
-        required: true
+        required: false
         default: 'terraform/'
 
 env:
@@ -42,34 +42,34 @@ jobs:
             TFPATH: ${{ github.event.inputs.tfpath }}
             TFPATH2: ${{ inputs.tfpath }}
 
-      - name: Checkout
-        uses: actions/checkout@v3
+      # - name: Checkout
+      #   uses: actions/checkout@v3
 
-      - name: 'Authenticate to Google Cloud'
-        id: auth
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{secrets.GCP_SA_KEY}}
+      # - name: 'Authenticate to Google Cloud'
+      #   id: auth
+      #   uses: google-github-actions/auth@v0
+      #   with:
+      #     credentials_json: ${{secrets.GCP_SA_KEY}}
 
-      - name: Setup Terraform CLI
-        uses: hashicorp/setup-terraform@v2.0.2
+      # - name: Setup Terraform CLI
+      #   uses: hashicorp/setup-terraform@v2.0.2
 
-      - name: Terraform init, plan and apply
-        run: |
-          echo 'current work dir content_before>>>>'
-          ls
-          cd ${{ github.event.inputs.tfpath }}
-          echo 'current work dir content_after>>>>'
-          ls
-          echo "** Running Terraform Init**"
-          terraform init
+      # - name: Terraform init, plan and apply
+      #   run: |
+      #     echo 'current work dir content_before>>>>'
+      #     ls
+      #     cd ${{ github.event.inputs.tfpath }}
+      #     echo 'current work dir content_after>>>>'
+      #     ls
+      #     echo "** Running Terraform Init**"
+      #     terraform init
 
-          echo "** Running Terraform Validate**"
-          terraform validate
+      #     echo "** Running Terraform Validate**"
+      #     terraform validate
 
-          echo "** Running Terraform Plan**"
-          terraform plan
-        working-directory: ${{ github.event.inputs.tfpath }}
+      #     echo "** Running Terraform Plan**"
+      #     terraform plan
+      #   working-directory: ${{ github.event.inputs.tfpath }}
 
       # - name: 'Storing SA Key to json file'
       #   id: sa-config
