--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       input:
         description: "Test"
-        required: false
+        required: true
         default: "World"
 
 jobs:
