--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -18,3 +18,7 @@ jobs:
     - run: |
         echo "Log level: ${{ github.event.inputs.logLevel }}"
         echo "Tags: ${{ github.event.inputs.tags }}" 
+        echo "Log level: ${{ github.on.push.inputs.logLevel }}"
+        echo "Tags: ${{ github.on.push.inputs.tags }}" 
+        echo "Log level: ${{ on.push.inputs.logLevel }}"
+        echo "Tags: ${{ on.push.inputs.tags }}" 
