--- a/.github/workflows/terraform_test.yaml
+++ b/.github/workflows/terraform_test.yaml
@@ -26,22 +26,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: 'Authenticate to Google Cloud'
-        id: auth
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{secrets.GCP_SA_KEY}}
+      # # - name: 'Authenticate to Google Cloud'
+      # #   id: auth
+      # #   uses: google-github-actions/auth@v0
+      # #   with:
+      # #     credentials_json: ${{secrets.GCP_SA_KEY}}
 
-      - name: Setup Terraform CLI
-        uses: hashicorp/setup-terraform@v2.0.2
+      # - name: Setup Terraform CLI
+      #   uses: hashicorp/setup-terraform@v2.0.2
 
       - name: Terraform init, plan and apply
         run: |
-          echo 'current work dir content_before>>>>'
-          ls
-          # cd ${{ github.event.inputs.tfpath }}
-          # echo 'current work dir content_after>>>>'
+          # echo 'current work dir content_before>>>>'
           # ls
+          # # cd ${{ github.event.inputs.tfpath }}
+          # # echo 'current work dir content_after>>>>'
+          # # ls
           echo "** Running Terraform Init**"
           terraform init
 
