--- a/.github/workflows/terraform_up.yaml
+++ b/.github/workflows/terraform_up.yaml
@@ -7,38 +7,32 @@ on:
         description: 'TF File Path'     
         required: true
         default: 'terraform/'
-
+      terrafrom_destroy:
+        description: 'Destroy terraform'     
+        required: true
+        default: false
 env:
-  # TF_VAR_bucket_name:  'dez-capstone-2023'
-  # TF_VAR_project_id: 'dez-capstone-2023' 
-  # TF_VAR_region: 'us-central1'
-  # TF_VAR_zone: 'us-central1-c'
-  # TF_VAR_credentials: ${{ secrets.GCP_SA_KEY }}
   TF_VAR_credentials_file: ${{ secrets.GCP_SA_KEY }}
   
-
 jobs:
-
   terraform:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Terraform init
-        run: |
-          echo "** Running Terraform Init**"
+        run:
           terraform init
+        working-directory: ${{ github.event.inputs.tfpath }}
       - name: Terraform validate
-        run: |
-          echo "** Running Terraform Validate**"
+        run:
           terraform validate
+        working-directory: ${{ github.event.inputs.tfpath }}
       - name: Terraform plan
-        run: |
-          echo "** Running Terraform Plan**"
+        run:
           terraform plan --var="credentials_file=$TF_VAR_credentials_file"
+        working-directory: ${{ github.event.inputs.tfpath }}
       - name: Terraform apply
-        run: |
-          echo "** Running Terraform Plan**"
+        run:
           terraform apply  --auto-approve --var="credentials_file=$TF_VAR_credentials_file"
         working-directory: ${{ github.event.inputs.tfpath }}
