--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-ame: Terraform apply
+name: Test GOOGLE_APPLICATION_CREDENTIALS
 
 on: 
   workflow_dispatch:
@@ -24,5 +24,6 @@ jobs:
       - name: Test GCP env
         run:
           echo GOOGLE_APPLICATION_CREDENTIALS $GOOGLE_APPLICATION_CREDENTIALS
+
 
 
